--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -99,40 +99,40 @@ steps:
         ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
           INSTALL_DEFAULT_ANDROID_API: 'true'
 
-  - pwsh: |
-      if ($env:JAVA_HOME_17_X64) {
-        $env:JAVA_HOME = $env:JAVA_HOME_17_X64
-      } else {
-        $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-17.*\bin\java.exe) | Select-Object -First 1
-        if ($path -and (Test-Path $path)) {
-          $env:JAVA_HOME = $path.Directory.Parent.FullName
-        }
-      }
-      if ($env:JAVA_HOME) {
-        echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
-        echo "JAVA_HOME set to '$env:JAVA_HOME'"
-      } else {
-        echo "Unable to set JAVA_HOME"
-      }
-    displayName: 'Setup JDK Paths'
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+  # - pwsh: |
+  #     if ($env:JAVA_HOME_17_X64) {
+  #       $env:JAVA_HOME = $env:JAVA_HOME_17_X64
+  #     } else {
+  #       $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-17.*\bin\java.exe) | Select-Object -First 1
+  #       if ($path -and (Test-Path $path)) {
+  #         $env:JAVA_HOME = $path.Directory.Parent.FullName
+  #       }
+  #     }
+  #     if ($env:JAVA_HOME) {
+  #       echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
+  #       echo "JAVA_HOME set to '$env:JAVA_HOME'"
+  #     } else {
+  #       echo "Unable to set JAVA_HOME"
+  #     }
+  #   displayName: 'Setup JDK Paths'
+  #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
-  - pwsh: |
-      if ($env:ANDROID_SDK_ROOT) {
-        echo "ANDROID_SDK_ROOT already set to '$env:ANDROID_SDK_ROOT'"
-      } else {
-        if ((Test-Path "${env:ProgramFiles(x86)}\Android\android-sdk")) {
-          $env:ANDROID_SDK_ROOT = "${env:ProgramFiles(x86)}\Android\android-sdk"
-        }
-        if ($env:ANDROID_SDK_ROOT) {
-          echo "##vso[task.setvariable variable=ANDROID_SDK_ROOT]$env:ANDROID_SDK_ROOT"
-          echo "ANDROID_SDK_ROOT set to '$env:ANDROID_SDK_ROOT'"
-        } else {
-          echo "Unable to set ANDROID_SDK_ROOT"
-        }
-      }
-    displayName: 'Setup ANDROID_SDK_ROOT Paths'
-    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+  # - pwsh: |
+  #     if ($env:ANDROID_SDK_ROOT) {
+  #       echo "ANDROID_SDK_ROOT already set to '$env:ANDROID_SDK_ROOT'"
+  #     } else {
+  #       if ((Test-Path "${env:ProgramFiles(x86)}\Android\android-sdk")) {
+  #         $env:ANDROID_SDK_ROOT = "${env:ProgramFiles(x86)}\Android\android-sdk"
+  #       }
+  #       if ($env:ANDROID_SDK_ROOT) {
+  #         echo "##vso[task.setvariable variable=ANDROID_SDK_ROOT]$env:ANDROID_SDK_ROOT"
+  #         echo "ANDROID_SDK_ROOT set to '$env:ANDROID_SDK_ROOT'"
+  #       } else {
+  #         echo "Unable to set ANDROID_SDK_ROOT"
+  #       }
+  #     }
+  #   displayName: 'Setup ANDROID_SDK_ROOT Paths'
+  #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
   # Prepare Both
   - task: UseDotNet@2                 # https://docs.microsoft.com/en-us/azure/devops/pipelines/tasks/tool/dotnet-core-tool-installer?view=azure-devops
