--- a/eng/pipelines/common/provision.yml
+++ b/eng/pipelines/common/provision.yml
@@ -99,23 +99,23 @@ steps:
         ${{ if eq(parameters.installDefaultAndroidApi, true) }}:
           INSTALL_DEFAULT_ANDROID_API: 'true'
 
-  # - pwsh: |
-  #     if ($env:JAVA_HOME_17_X64) {
-  #       $env:JAVA_HOME = $env:JAVA_HOME_17_X64
-  #     } else {
-  #       $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-17.*\bin\java.exe) | Select-Object -First 1
-  #       if ($path -and (Test-Path $path)) {
-  #         $env:JAVA_HOME = $path.Directory.Parent.FullName
-  #       }
-  #     }
-  #     if ($env:JAVA_HOME) {
-  #       echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
-  #       echo "JAVA_HOME set to '$env:JAVA_HOME'"
-  #     } else {
-  #       echo "Unable to set JAVA_HOME"
-  #     }
-  #   displayName: 'Setup JDK Paths'
-  #   condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
+  - pwsh: |
+      if ($env:JAVA_HOME_17_X64) {
+        $env:JAVA_HOME = $env:JAVA_HOME_17_X64
+      } else {
+        $path = (Get-ChildItem $env:ProgramFiles\Microsoft\jdk-17.*\bin\java.exe) | Select-Object -First 1
+        if ($path -and (Test-Path $path)) {
+          $env:JAVA_HOME = $path.Directory.Parent.FullName
+        }
+      }
+      if ($env:JAVA_HOME) {
+        echo "##vso[task.setvariable variable=JAVA_HOME]$env:JAVA_HOME"
+        echo "JAVA_HOME set to '$env:JAVA_HOME'"
+      } else {
+        echo "Unable to set JAVA_HOME"
+      }
+    displayName: 'Setup JDK Paths'
+    condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
   # - pwsh: |
   #     if ($env:ANDROID_SDK_ROOT) {
