--- a/NuGet.config
+++ b/NuGet.config
@@ -10,10 +10,14 @@
     <!--  End: Package sources from dotnet-android -->
     <!--  Begin: Package sources from dotnet-aspnetcore -->
     <add key="darc-int-dotnet-aspnetcore-af22eff" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-6" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-6/nuget/v3/index.json" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-5" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-5/nuget/v3/index.json" />
     <add key="darc-int-dotnet-aspnetcore-af22eff-4" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-aspnetcore-af22effa-4/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-aspnetcore -->
     <!--  Begin: Package sources from dotnet-emsdk -->
     <add key="darc-pub-dotnet-emsdk-763d10a" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-6" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-6/nuget/v3/index.json" />
+    <add key="darc-pub-dotnet-emsdk-763d10a-5" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-5/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-emsdk-763d10a-4" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-4/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-emsdk-763d10a-3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-3/nuget/v3/index.json" />
     <add key="darc-pub-dotnet-emsdk-763d10a-2" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-emsdk-763d10a1-2/nuget/v3/index.json" />
@@ -23,7 +27,7 @@
     <add key="darc-int-dotnet-runtime-9d5a6a9" value="https://pkgs.dev.azure.com/dnceng/internal/_packaging/darc-int-dotnet-runtime-9d5a6a9a/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-runtime -->
     <!--  Begin: Package sources from xamarin-xamarin-macios -->
-    <add key="darc-pub-xamarin-xamarin-macios-d9f2854" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-d9f28545/nuget/v3/index.json" />
+    <add key="darc-pub-xamarin-xamarin-macios-797d307" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-797d3072/nuget/v3/index.json" />
     <!--  End: Package sources from xamarin-xamarin-macios -->
     <!--End: Package sources managed by Dependency Flow automation. Do not edit the sources above.-->
     <add key="local" value="LOCAL_PLACEHOLDER" />
@@ -56,6 +60,8 @@
     <!--Begin: Package sources managed by Dependency Flow automation. Do not edit the sources below.-->
     <!--  Begin: Package sources from dotnet-aspnetcore -->
     <add key="darc-int-dotnet-aspnetcore-af22eff-4" value="true" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-5" value="true" />
+    <add key="darc-int-dotnet-aspnetcore-af22eff-6" value="true" />
     <add key="darc-int-dotnet-aspnetcore-af22eff" value="true" />
     <!--  End: Package sources from dotnet-aspnetcore -->
     <!--  Begin: Package sources from dotnet-runtime -->
